--- a/index.html
+++ b/index.html
@@ -7,16 +7,33 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="styles.css" rel="stylesheet" type="text/css" />
     <title>Hello, world!</title>
   </head>
   <body>
-<<<<<<< HEAD
-    <p> hi there : KC</p>
-=======
-    <h1>ALASKA</h1>
+    <section class="container">
+        <div class="row">
+            nav bar here
+        </div>
+
+        <div class="row" id="hero">
+            hero here
+        </div>
+
+        <div class="row">
+            <div class="col-12 col-md-6">
+            top2
+            </div>
+            <div class="col">
+            bottom2
+            </div>
+        </div>
+
+        <div class="row">
+            footer
+        </div>
+    </section>
     
->>>>>>> fb172a2736e5922dad84505a9415542cc714b929
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
