--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="styles.css" rel="stylesheet" type="text/css" />
+    <link href="video.css" rel="stylesheet" type="text/css" />
     <title>Hello, world!</title>
   </head>
   <body>
@@ -17,7 +18,20 @@
         </div>
 
         <div class="row" id="hero">
-            hero here
+          <header>
+            <div class="overlay"></div>
+            <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+              <source src="video.mp4" type="video/mp4">
+            </video>
+            <div class="container h-100">
+              <div class="d-flex h-100 text-center align-items-center">
+                <div class="w-100 text-white">
+                  <h1 class="display-3">Video Header</h1>
+                  <p class="lead mb-0">With HTML5 Video and Bootstrap 4</p>
+                </div>
+              </div>
+            </div>
+          </header>
         </div>
 
         <div class="row">
