--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <body>
     <section class="container-fluid">
         <div class="row">
+        <!-- navbar -->
+        
         <div class="col">
             <nav class="navbar navbar-expand-md navbar-light bg-light">
             <a class="navbar-brand" href="#"><img src="images/logo.png" id="logo" alt="logo here"></img></a>
@@ -30,20 +32,40 @@
             </div>
         </div>
         </div>
-
+        <!-- herovid -->
         <div class="row" id="hero">
             hero here
         </div>
 
+
+
+
+        <!-- top cards -->
         <div class="row">
             <div class="col-12 col-md-6">
-            top2
+                <div class="card" style="width: 18rem;">
+                    <img src="images/curry.jpg" id="dish1" class="card-img-top" alt="dish1">
+                    <div class="card-body">
+                        <h5 class="card-title">Curry Brocoli</h5>
+                        <p class="card-text">Most Delicious Curry 2020. Really.</p>
+                        <a href="#" class="btn btn-primary">Add to cart</a>
+                    </div>
+        </div>
+
+
+
+
+        <!-- bottom cards -->
             </div>
             <div class="col">
             bottom2
             </div>
         </div>
 
+
+
+
+        <!-- footer -->
         <div class="row">
             footer
         </div>
