--- a/index.html
+++ b/index.html
@@ -55,26 +55,63 @@
 
 
         <!-- top cards -->
-        <div class="row">
-            <div class="col-12 col-md-6">
-                <div class="card" style="width: 18rem;">
-                    <img src="images/curry.jpg" id="dish1" class="card-img-top" alt="dish1">
-                    <div class="card-body">
-                        <h5 class="card-title">Curry Brocoli</h5>
-                        <p class="card-text">Most Delicious Curry 2020. Really.</p>
-                        <a href="#" class="btn btn-primary">Add to cart</a>
-                    </div>
+        <div class="row mt-3">
+
+
+        <div class="col-12 col-md-4 col-lg-3 mt-4">
+            <div class="card" style="width: 18rem;">
+                <img src="images/curry.jpg" class="card-img-top" alt="dish1">
+                <div class="card-body">
+                    <h5 class="card-title">Legendary Curry</h5>
+                    <p class="card-text">Curry brocolli. Fragrant and crunchy.</p>
+                    <a href="#" class="btn btn-primary">Add to cart.</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-12 col-md-6 col-lg-3 mt-4">
+            <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Card 2</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-12 col-md-6 col-lg-3 mt-4">
+            <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Card 3</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-12 col-md-6 col-lg-3 mt-4">
+            <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Card 4</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+
+
+
         </div>
 
 
 
 
         <!-- bottom cards -->
-            </div>
-            <div class="col">
-            bottom2
-            </div>
-        </div>
+            
+         
 
 
 
