Updated Footer with Mobile-Responsiveness

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="styles.css" rel="stylesheet" type="text/css" />
     <link href="video.css" rel="stylesheet" type="text/css" />
-    <title>Hello, world!</title>
+    <title>Kurry</title>
   </head>
   <body>
     <section class="container-fluid">
@@ -107,90 +107,82 @@
 
       <!-- Footer -->
       <div id="footer">
+      <footer class="page-footer font-small blue pt-4">
+        <!-- Footer Links -->
+        <div class="container-fluid text-center text-md-left">
+          <!-- Grid row -->
+          <div class="row">
+            <!-- Grid column -->
+            <div class="col-md-4 mt-md-0 mt-3">
+              <!-- Content -->
+              <h5 class="footer-logo"><img src="images/logo.png" style="height:100px"/></h5>
+              <br><br><br>
+              <p>Sign up for our newsletter to stay up-to-date with our promotions, discounts, sales, and special offers</p>
+            </div>
+            <!-- Grid column -->
+            <hr class="clearfix w-100 d-md-none pb-3">
+            <!-- Grid column -->
+            <div class="col-md-3 mb-md-0 mb-3 mr-3">
+              <!-- Links -->
+              <h5 class="text-uppercase mt-4" >INFORMATION</h5>
+              <ul class="list-unstyled">
+                <li>
+                  <a href="#!">ABOUT US</a>
+                </li>
+                <li>
+                  <a href="#!">CONTACT US</a>
+                </li>
+                <li>
+                  <a href="#!">PRIVACY POLICIES</a>
+                </li>
+                <li>
+                  <a href="#!">ORDERS AND RETURNS</a>
+                </li>
+                <li>
+                  <a href="#!">NEWSLETTER SUBSCRIPTION</a>
+                </li>
+                <li>
+                  <a href="#!">TERMS AND CONDITIONS</a>
+                </li>
+              </ul>
+            </div>
+            <!-- Grid column -->
+            <div class="col-md-3 mb-md-0 mb-3">
+              <!-- Links -->
+              <h5 class="text-uppercase mt-4">CONTACTS</h5>
+              <ul class="list-unstyled">
+                <li>
+                  <a href="#!">Link 1</a>
+                </li>
+                <li>
+                  <a href="#!">Link 2</a>
+                </li>
+                <li>
+                  <a href="#!">Link 3</a>
+                </li>
+                <li>
+                  <a href="#!">Link 4</a>
+                </li>
+              </ul>
+            </div>
+            <!-- Grid column -->
+          </div>
+          <!-- Grid row -->
+        </div>
+        <!-- Footer Links -->
 
-<footer class="page-footer font-small blue pt-4">
-
-  <!-- Footer Links -->
-  <div class="container-fluid text-center text-md-left">
-
-    <!-- Grid row -->
-    <div class="row">
-
-      <!-- Grid column -->
-      <div class="col-md-6 mt-md-0 mt-3">
-
-        <!-- Content -->
-        <h5 class="text-uppercase">Footer Content</h5>
-        <p>Here you can use rows and columns to organize your footer content.</p>
-
+        <!-- Copyright -->
+        <div class="footer-copyright text-center py-3">© 2020 Copyright:
+          <a href="#"> Kurry PTE LTD</a>
+        </div>
+        <!-- Copyright -->
+      </footer>
+      <!-- Footer -->
       </div>
-      <!-- Grid column -->
+      <!-- End Footer-->
 
-      <hr class="clearfix w-100 d-md-none pb-3">
 
-      <!-- Grid column -->
-      <div class="col-md-3 mb-md-0 mb-3">
 
-        <!-- Links -->
-        <h5 class="text-uppercase">Links</h5>
-
-        <ul class="list-unstyled">
-          <li>
-            <a href="#!">Link 1</a>
-          </li>
-          <li>
-            <a href="#!">Link 2</a>
-          </li>
-          <li>
-            <a href="#!">Link 3</a>
-          </li>
-          <li>
-            <a href="#!">Link 4</a>
-          </li>
-        </ul>
-
-      </div>
-      <!-- Grid column -->
-
-      <!-- Grid column -->
-      <div class="col-md-3 mb-md-0 mb-3">
-
-        <!-- Links -->
-        <h5 class="text-uppercase">Links</h5>
-
-        <ul class="list-unstyled">
-          <li>
-            <a href="#!">Link 1</a>
-          </li>
-          <li>
-            <a href="#!">Link 2</a>
-          </li>
-          <li>
-            <a href="#!">Link 3</a>
-          </li>
-          <li>
-            <a href="#!">Link 4</a>
-          </li>
-        </ul>
-
-      </div>
-      <!-- Grid column -->
-
-    </div>
-    <!-- Grid row -->
-
-  </div>
-  <!-- Footer Links -->
-
-  <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© 2020 Copyright:
-    <a href="https://mdbootstrap.com/education/bootstrap/"> MDBootstrap.com</a>
-  </div>
-  <!-- Copyright -->
-
-</footer>
-<!-- Footer -->
-      </div>
 
         </div>
     </section>
