--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 
         <!-- top cards -->
-        <div class="row mt-3 mb-3" id="cards">
+        <div class="row mt-3 mb-3 d-flex justify-content-end" id="cards">
 
 
         <div class="col-12 col-md-6 col-xl-3 mt-4">
