Fixed whitepace in footer, added locations

--- a/index.html
+++ b/index.html
@@ -58,63 +58,62 @@
 
 
         <!-- top cards -->
-        <div class="row mt-3 mb-3 d-flex justify-content-end" id="cards">
+        <div class="row mt-3">
 
 
-        <div class="col-12 col-md-6 col-xl-3 mt-4">
+        <div class="col-12 col-md-4 col-lg-3 mt-4">
             <div class="card" style="width: 18rem;">
                 <img src="images/curry.jpg" class="card-img-top" alt="dish1">
                 <div class="card-body">
                     <h5 class="card-title">Legendary Curry</h5>
                     <p class="card-text">Curry brocolli. Fragrant and crunchy.</p>
-                    <a href="#" class="btn btn-primary">Add to cart</a>
+                    <a href="#" class="btn btn-primary">Add to cart.</a>
                 </div>
             </div>
         </div>
 
-        <div class="col-12 col-md-6 col-xl-3 mt-4">
+        <div class="col-12 col-md-6 col-lg-3 mt-4">
             <div class="card" style="width: 18rem;">
-                <img src="images/spices.jpg" class="card-img-top" alt="dish2">
+                <img src="..." class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Delhi Spices</h5>
-                    <p class="card-text">Beware! Hot!</p>
-                    <a href="#" class="btn btn-primary">Add to cart</a>
+                    <h5 class="card-title">Card 2</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
             </div>
         </div>
 
-        <div class="col-12 col-md-6 col-xl-3 mt-4">
+        <div class="col-12 col-md-6 col-lg-3 mt-4">
             <div class="card" style="width: 18rem;">
-                <img src="images/naan.jpg" class="card-img-top" alt="naan">
+                <img src="..." class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">King Naan</h5>
-                    <p class="card-text">It's just bread.</p>
-                    <a href="#" class="btn btn-primary">Add to cart</a>
+                    <h5 class="card-title">Card 3</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
             </div>
         </div>
 
-        <div class="col-12 col-md-6 col-xl-3 mt-4">
+        <div class="col-12 col-md-6 col-lg-3 mt-4">
             <div class="card" style="width: 18rem;">
-                <img src="images/butter.jpg" class="card-img-top" alt="butchick">
+                <img src="..." class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Soggy Butter Chickem</h5>
-                    <p class="card-text">Made by Kwok.</p>
-                    <a href="#" class="btn btn-primary">Add to cart</a>
+                    <h5 class="card-title">Card 4</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
             </div>
         </div>
-    </div>
 
       <!-- Footer -->
-      <div id="footer">
+      <div id="footer" style="margin-top: 20px ">
       <footer class="page-footer font-small blue pt-4">
         <!-- Footer Links -->
-        <div class="container-fluid text-center text-md-left">
+        <div class="container-fluid text-center text-md-left margin:0">
           <!-- Grid row -->
           <div class="row">
             <!-- Grid column -->
-            <div class="col-md-4 mt-md-0 mt-3">
+            <div class="col-md-3 mt-md-0 mt-3">
               <!-- Content -->
               <h5 class="footer-logo"><img src="images/logo.png" style="height:100px"/></h5>
               <br><br><br>
@@ -123,7 +122,7 @@
             <!-- Grid column -->
             <hr class="clearfix w-100 d-md-none pb-3">
             <!-- Grid column -->
-            <div class="col-md-3 mb-md-0 mb-3 mr-3">
+            <div class="col-md-3 mb-md-0 mb-3">
               <!-- Links -->
               <h5 class="text-uppercase mt-4" >INFORMATION</h5>
               <ul class="list-unstyled">
@@ -147,6 +146,26 @@
                 </li>
               </ul>
             </div>
+            <!-- Grid column -->
+            <div class="col-md-3 mb-md-0 mb-3">
+              <!-- Links -->
+              <h5 class="text-uppercase mt-4">LOCATIONS</h5>
+              <ul class="list-unstyled">
+                <li>
+                  <a href="#!">Link 1</a>
+                </li>
+                <li>
+                  <a href="#!">Link 2</a>
+                </li>
+                <li>
+                  <a href="#!">Link 3</a>
+                </li>
+                <li>
+                  <a href="#!">Link 4</a>
+                </li>
+              </ul>
+            </div>
+            <!-- Grid column -->
             <!-- Grid column -->
             <div class="col-md-3 mb-md-0 mb-3">
               <!-- Links -->
