--- a/index.html
+++ b/index.html
@@ -58,84 +58,58 @@
 
 
         <!-- top cards -->
-<<<<<<< HEAD
-        <div class="row mt-3">
-
-
-        <div class="col-12 col-md-4 col-lg-3 mt-4">
-=======
-    
-        <div class="row mt-3 mb-3" id="cards">
+         <div class="row mt-3 mb-3" id="cards">
 
         
         <div class="col-12 col-md-6 col-xl-3 mt-4 justify-content-center d-flex flex-row">
->>>>>>> 2d33db04c9eb37105fe6fae7063a3126feed4da1
             <div class="card" style="width: 18rem;">
                 <img src="images/curry.jpg" class="card-img-top" alt="dish1">
                 <div class="card-body">
                     <h5 class="card-title">Legendary Curry</h5>
                     <p class="card-text">Curry brocolli. Fragrant and crunchy.</p>
-                    <a href="#" class="btn btn-primary">Add to cart.</a>
+                    <a href="#" class="btn btn-primary">Add to cart</a>
                 </div>
             </div>
         </div>
 
-<<<<<<< HEAD
-        <div class="col-12 col-md-6 col-lg-3 mt-4">
-=======
         <div class="col-12 col-md-6 col-xl-3 mt-4 justify-content-center d-flex flex-row">
->>>>>>> 2d33db04c9eb37105fe6fae7063a3126feed4da1
             <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="images/spices.jpg" class="card-img-top" alt="dish2">
                 <div class="card-body">
-                    <h5 class="card-title">Card 2</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <h5 class="card-title">Delhi Spices</h5>
+                    <p class="card-text">Beware! Hot!</p>
+                    <a href="#" class="btn btn-primary">Add to cart</a>
                 </div>
             </div>
         </div>
 
-<<<<<<< HEAD
-        <div class="col-12 col-md-6 col-lg-3 mt-4">
-=======
         <div class="col-12 col-md-6 col-xl-3 mt-4 justify-content-center d-flex flex-row">
->>>>>>> 2d33db04c9eb37105fe6fae7063a3126feed4da1
             <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="images/naan.jpg" class="card-img-top" alt="naan">
                 <div class="card-body">
-                    <h5 class="card-title">Card 3</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <h5 class="card-title">King Naan</h5>
+                    <p class="card-text">It's just bread.</p>
+                    <a href="#" class="btn btn-primary">Add to cart</a>
                 </div>
             </div>
         </div>
 
-<<<<<<< HEAD
-        <div class="col-12 col-md-6 col-lg-3 mt-4">
-=======
         <div class="col-12 col-md-6 col-xl-3 mt-4 justify-content-center d-flex flex-row">
->>>>>>> 2d33db04c9eb37105fe6fae7063a3126feed4da1
             <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="images/butter.jpg" class="card-img-top" alt="butchick">
                 <div class="card-body">
-                    <h5 class="card-title">Card 4</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <h5 class="card-title">Soggy Butter Chickem</h5>
+                    <p class="card-text">Made by Kwok.</p>
+                    <a href="#" class="btn btn-primary">Add to cart</a>
                 </div>
             </div>
         </div>
-<<<<<<< HEAD
-
-      <!-- Footer -->
-      <div id="footer" style="margin-top: 20px ">
-=======
     </div>
    
 
       <!-- Footer -->
     <section class="container-fluid">
       <div id="footer">
->>>>>>> 2d33db04c9eb37105fe6fae7063a3126feed4da1
       <footer class="page-footer font-small blue pt-4">
         <!-- Footer Links -->
         <div class="container-fluid text-center text-md-left margin:0">
