--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 
 
-        <!-- top cards -->
+        <!-- cards -->
          <div class="row mt-3 mb-3" id="cards">
 
         
@@ -98,7 +98,7 @@
             <div class="card" style="width: 18rem;">
                 <img src="images/butter.jpg" class="card-img-top" alt="butchick">
                 <div class="card-body">
-                    <h5 class="card-title">Soggy Butter Chickem</h5>
+                    <h5 class="card-title">Soggy Butter Chicken</h5>
                     <p class="card-text">Made by Kwok.</p>
                     <a href="#" class="btn btn-primary">Add to cart</a>
                 </div>
