Added google fonts

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script&display=swap" rel="stylesheet">
     <link href="styles.css" rel="stylesheet" type="text/css" />
     <link href="video.css" rel="stylesheet" type="text/css" />
+    
     <title>Kurry</title>
   </head>
   <body>
@@ -46,8 +48,8 @@
             <div class="container h-100">
               <div class="d-flex h-100 text-center align-items-center">
                 <div class="w-100 text-white">
-                  <h1 class="display-3">Video Header</h1>
-                  <p class="lead mb-0">With HTML5 Video and Bootstrap 4</p>
+                  <h1 class="display-3" style="font-family:'Kaushan Script'">Curry made for Sultans</h1>
+                  <p class="lead mb-0" style="font-family:'Kaushan'"> only $99999.99 per bowl</p>
                 </div>
               </div>
             </div>
@@ -116,7 +118,7 @@
             <div class="col-md-3 mt-md-0 mt-3">
               <!-- Content -->
               <h5 class="footer-logo"><img src="images/logo.png" style="height:100px"/></h5>
-              <br><br><br>
+              <br><br>
               <p>Sign up for our newsletter to stay up-to-date with our promotions, discounts, sales, and special offers</p>
             </div>
             <!-- Grid column -->
