--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         
         <div class="col">
             <nav class="navbar navbar-expand-md navbar-light bg-light">
-            <a class="navbar-brand" href="#"><img src="images/logo.png" id="logo" alt="logo here"></img></a>
+            <a class="navbar-brand" href="#"><img src="images/logo.png" id="logo" alt="logo here"/></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
