Updated footer font color and content

--- a/index.html
+++ b/index.html
@@ -154,16 +154,16 @@
               <h5 class="text-uppercase mt-4">LOCATIONS</h5>
               <ul class="list-unstyled">
                 <li>
-                  <a href="#!">Link 1</a>
+                  <a href="#!">Macpherson Outlet</a>
                 </li>
                 <li>
-                  <a href="#!">Link 2</a>
+                  <a href="#!">VivoCity Outlet</a>
                 </li>
                 <li>
-                  <a href="#!">Link 3</a>
+                  <a href="#!">NEX Outlet</a>
                 </li>
                 <li>
-                  <a href="#!">Link 4</a>
+                  <a href="#!">Plaza Singapura Outlet</a>
                 </li>
               </ul>
             </div>
@@ -172,18 +172,16 @@
             <div class="col-md-3 mb-md-0 mb-3">
               <!-- Links -->
               <h5 class="text-uppercase mt-4">CONTACTS</h5>
-              <ul class="list-unstyled">
+              <ul class="list-unstyled" style="color:orange">
+                
                 <li>
-                  <a href="#!">Link 1</a>
+                  <span class="info mr-3" style="font-size: 10px">Office:</span><a href="#!">+65-87622323</a>
+                </li>
+                <li >
+                  <span class="info mr-4" style="font-size: 10px">Email:</span><a href="#!">KurryCares@kurry.com</a>
                 </li>
                 <li>
-                  <a href="#!">Link 2</a>
-                </li>
-                <li>
-                  <a href="#!">Link 3</a>
-                </li>
-                <li>
-                  <a href="#!">Link 4</a>
+                  <span class="info mr-2" style="font-size: 10px">Address:</span><a href="#!">166 Serangoon Road Singapore 218050</a>
                 </li>
               </ul>
             </div>
