--- a/index.html
+++ b/index.html
@@ -56,12 +56,23 @@
           </header>
         </div>
 
+        <div class="row mt-1" id="gdll">
+            <div class="col d-none d-md-flex mt-4 justify-content-center flex-row">
+                <div class="card mb-3">
+                    <img src="images/chef.jpg" class="card-img-top" alt="chef">
+                    <div class="card-body">
+                        <h5 class="card-title">Sultan's Chef</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                    </div>
+            </div>
+        </div>
 
 
 
         <!-- cards -->
          <div class="row mt-3 mb-3" id="cards">
-
         
         <div class="col-12 col-md-6 col-xl-3 mt-4 justify-content-center d-flex flex-row">
             <div class="card" style="width: 18rem;">
